--- a/2.html
+++ b/2.html
@@ -23,7 +23,7 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="/radar/">6欄</a>
+				<a class="nav-link" href="/">6欄</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#1d0ntkn0w">通識</a>
