--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	        <big><sup>x</sup></big>
 	      </button>
 	      2019/01/24 新增6筆資料，若您也想新增，<a target="_blank" href="https://goo.gl/forms/6VSVwq5f32Sr1SeF2">請點我</a>
-		2019/05/25 新增6筆資料
+		<br>2019/05/25 新增1筆資料
 	</div>
 </div>
 <!--
