6欄新增2019/9/6一筆

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 	      <button class="close" data-dismiss="alert" >    
 	        <big><sup>x</sup></big>
 	      </button>
-	      2019/01/24 新增6筆資料，若您也想新增，<a target="_blank" href="https://goo.gl/forms/6VSVwq5f32Sr1SeF2">請點我</a>
-		<br>2019/05/25 新增1筆資料
+	      2020/06/06 新增1筆資料，陸續更新中，請耐心等候，若您也想新增，<a target="_blank" href="https://goo.gl/forms/6VSVwq5f32Sr1SeF2">請點我</a>
+		  <br>
+		  2019 年新增7筆資料
 	</div>
 </div>
 <!--
@@ -89,6 +90,15 @@
 	
 </thead>
 <tbody>
+	<tr>
+		<th>0</th>
+		<td>#課程 #107上 陳介英 社區文化感動行銷</td>
+		<td>通識</td>
+		<td>3/5 分</td>
+		<td>有幾堂可以不用上課讓小組自由去拜訪社區 但要照老師的進度去規劃社區發展計畫 點名採簽到 無法代簽 上課基本上採小組討論方式 偶爾有老師演講</td>
+		<td>沒有考試 定期有小組報告</td>
+		<td>只要有做出一點計畫 上課都有到 分數都給很甜 </td>
+	</tr>
 	<tr>
 		<th>1</th>
 		<td>#倫理價值與生命科學 #107上 黃登煌</td>
@@ -1041,7 +1051,7 @@
 	
 </thead>
 <tbody>
-		<tr>
+	<tr>
 		<th>0</th>
 		<td>#課程 #106上 呂晃志 環境科學概論</td>
 		<td>綠色會計學程</td>
