--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark ">
-        <a class="navbar-brand" href="/radar/">FCU Course</a>
+        <a class="navbar-brand" href="/">FCU Course</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
