--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 
 	  gtag('config', 'UA-140496039-1');
 	</script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-R72DHHFQR3"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-R72DHHFQR3');
+	</script>
   </head>
   
   <body>
