--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<script src="https://babu7.github.io/bootstrap-sortable.js"></script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140495583-1"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
@@ -20,6 +22,7 @@
 
 	  gtag('config', 'UA-140495583-1');
 	</script>
+
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-R72DHHFQR3"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
