--- a/3.html
+++ b/3.html
@@ -57,7 +57,7 @@
 	      <button class="close" data-dismiss="alert" >    
 	        <big><sup>x</sup></big>
 	      </button>
-	      2019/01/24 新增6筆資料，若您也想新增，<a target="_blank" href="https://goo.gl/forms/6VSVwq5f32Sr1SeF2">請點我</a>
+	      2019/01/24 新增6筆資料，若您也想新增，<a target="_blank" href="https://forms.gle/zUrCLDbCCL2TNzRGA">請點我</a>
 	</div>
 </div>
 <hr>
@@ -4522,3 +4522,4 @@
 	</tr>
 	
 </tbody></table></html>
+
