--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <button class="close" data-dismiss="alert" >    
                 <big><sup>x</sup></big>
               </button>
-              2021/5月 新增20筆資料，若您也想新增，<a target="_blank" href="https://goo.gl/forms/6VSVwq5f32Sr1SeF2">請點我</a>
+              2021/5月 新增20筆資料，若您也想新增，<a target="_blank" href="https://forms.gle/zUrCLDbCCL2TNzRGA">請點我</a>
         </div>
     </div>
     <!-- -->
@@ -4977,6 +4977,7 @@ Mid exam. 30%, Final oral report 30%, Homework 30%, Presence 10%</td>
     </table>
   </body>
 </html>
+
 
 
 
